load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

# gazelle:resolve proto build/bazel/remote/execution/v2/remote_execution.proto @com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_proto
proto_library(
    name = "tree_output_proto",
    srcs = ["tree_output.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_proto"],
)

go_proto_library(
    name = "tree_output_go_proto",
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/api/tree_output",
    proto = ":tree_output_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
    ],
)

go_library(
    name = "tree_output",
    embed = [":tree_output_go_proto"],
    importpath = "github.com/bazelbuild/remote-apis-sdks/go/api/tree_output",
    visibility = ["//visibility:public"],
)
